<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationActivity">

    <android.widget.Button
        android:id="@+id/ChatButton3"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:text="Chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        android:backgroundTint="#fcdb00"
        android:background="@drawable/button_background" />


    <ImageButton
        android:id="@+id/gameConstantButton"
        android:layout_width="216dp"
        android:layout_height="111dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/game_settings"
        android:contentDescription="@string/param_tres_de_jeu"
        android:contextClickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carouselRecyclerviewPlayerList">

    </ImageButton>
    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="350dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameConstantButton">

        <TextView
            android:id="@+id/choseSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sélection des sons" />

        <TextView
            android:id="@+id/SuccessSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="Sélectionner un son de succéss" />

        <Spinner
            android:id="@+id/spinnerSucess"
            android:layout_width="240dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/SucessSoundButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="#0000FF"
                android:text="@string/confirmer"
                android:textColor="@color/white" />

            <android.widget.Button
                android:id="@+id/listenSucess"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_background"
                android:backgroundTint="#0000FF"
                android:text="@string/couter"
                android:textColor="@color/white" />
        </LinearLayout>


        <TextView
            android:id="@+id/SuccessError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="Sélectionner un son d'erreur" />

        <Spinner
            android:id="@+id/spinnerError"
            android:layout_width="240dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/ErrorSoundButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="#0000FF"
                android:text="@string/confirmer"
                android:textColor="@color/white" />

            <android.widget.Button
                android:id="@+id/listenError"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_background"
                android:backgroundTint="#0000FF"
                android:text="@string/couter"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>



    <ImageButton
        android:id="@+id/deleteGamesButton"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/delete_games"
        android:contentDescription="@string/delete_all_games"
        android:contextClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carouselRecyclerviewPlayerList"
        app:layout_constraintTop_toBottomOf="@+id/returnButton" />

    <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
        android:id="@+id/carouselRecyclerviewPlayerList"
        android:layout_width="690dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/retour"
        app:cornerRadius="0dp"
        app:icon="@drawable/exit_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePaperBackground"
        android:layout_width="353dp"
        android:layout_height="75dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toStartOf="@+id/returnButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/textTitlePage"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/conf"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imagePaperBackground"
        app:layout_constraintEnd_toEndOf="@+id/imagePaperBackground"
        app:layout_constraintStart_toStartOf="@+id/imagePaperBackground"
        app:layout_constraintTop_toTopOf="@+id/imagePaperBackground" />

    <ImageView
        android:id="@+id/imageTapeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-38"
        app:layout_constraintEnd_toStartOf="@+id/textTitlePage"
        app:layout_constraintTop_toTopOf="@+id/imagePaperBackground"
        app:srcCompat="@drawable/adhesive_tape" />

    <ImageView
        android:id="@+id/imageTapeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="38"
        app:layout_constraintStart_toEndOf="@+id/textTitlePage"
        app:srcCompat="@drawable/adhesive_tape"
        app:layout_constraintTop_toTopOf="@+id/imagePaperBackground" />

</androidx.constraintlayout.widget.ConstraintLayout>


